<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff4f8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="#4199d9"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fontFamily="blab.ttf"
            android:padding="15dp"
            android:text="OSPF Menu"
            android:textColor="#fff"
            android:textSize="60dp" />

        TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="Pilihlah salah satu menu dibawah ini :"
            android:textColor="#ffffffff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/buttonOSPF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hasilospf"
            android:typeface="monospace"
            flatui:theme="Sea" />

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/buttonIPInterface"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/interfaceshow"
            android:typeface="monospace"
            flatui:theme="Sky" />

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/buttonCost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/cost"
            android:typeface="monospace"
            flatui:theme="Orange" />

    </LinearLayout>
</LinearLayout>