<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.cengalabs.flatui.views.FlatTextView
        flatui:theme="Sky"
        android:id="@+id/textViewNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/routername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.cengalabs.flatui.views.FlatTextView
            flatui:theme="Sky"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routerbandiwith" />

        <com.cengalabs.flatui.views.FlatEditText
            android:layout_marginLeft="5dp"
            flatui:theme="Sky"
            android:id="@+id/editTextBandwith"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.cengalabs.flatui.views.FlatCheckBox
                flatui:theme="Sky"
                android:id="@+id/checkBoxFA0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PORT FA0" />

            <Spinner
                android:id="@+id/spinnerFA0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFA0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintIP" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginLeft="45dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextIPFA0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    android:layout_marginTop="10dp"
                    flatui:theme="Sky"
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputsubnet" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextSubnetFA0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.cengalabs.flatui.views.FlatCheckBox
                flatui:theme="Sky"
                android:id="@+id/checkBoxFA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="PORT FA1" />

            <Spinner
                android:id="@+id/spinnerFA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFA1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintIP" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginLeft="45dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextIPFA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputsubnet" />


                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextSubnetFA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.cengalabs.flatui.views.FlatCheckBox
                flatui:theme="Sky"
                android:id="@+id/checkBoxSE0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="PORT SE0" />

            <Spinner
                android:id="@+id/spinnerSE0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSE0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintIP" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginLeft="45dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextIPSE0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputsubnet" />


                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextSubnetSE0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <com.cengalabs.flatui.views.FlatCheckBox
                flatui:theme="Sky"
                android:id="@+id/checkBoxSE1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="PORT SE1" />

            <Spinner
                android:id="@+id/spinnerSE1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSE1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintIP" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginLeft="45dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextIPSE1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.cengalabs.flatui.views.FlatTextView
                    flatui:theme="Sky"
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputsubnet" />


                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    flatui:theme="Sky"
                    android:id="@+id/editTextSubnetSE1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>